# flute

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  flute-config.h.cmake  flute-config.hpp.cmake  format.sh
examples/: CMakeLists.txt
examples/gameserver/: CMakeLists.txt
examples/gameserver/login/: main.cc
include/: flute.hpp
include/flute/: Acceptor.h  AsyncIoService.h  Buffer.h  ByteBuffer.h  Channel.h  CircularBuffer.h  Connection.h  Connector.h  EventLoop.h  EventLoopGroup.h  EventLoopInterrupter.h  InetAddress.h  Logger.h  RingBuffer.h  Selector.h  Socket.h  TcpClient.h  TcpConnection.h  TcpServer.h  ThreadPool.h  TimerQueue.h  Timestamp.h  UdpConnection.h  UdpServer.h  config.h  config.hpp  copyable.h  copyable.hpp  endian.h  flute_types.h  noncopyable.h  noncopyable.hpp  reactor.hpp  socket_ops.h  socket_types.h  socket_types.hpp  thread_pool.hpp  thread_pool.inl
include/flute/detail/: epoll_reactor.hpp  epoll_reactor.inl
include/flute/impl/: channel.hpp  epoll_event_loop.hpp  epoll_event_loop.inl
src/flute/: Acceptor.cc  Acceptor.cpp  AsyncIoService.cc  Buffer.cc  Buffer.cpp  ByteBuffer.cc  Channel.cc  Channel.cpp  CircularBuffer.cc  Connection.cpp  Connector.cc  Connector.cpp  EventLoop.cc  EventLoop.cpp  EventLoopGroup.cc  EventLoopGroup.cpp  EventLoopInterrupter.cpp  EventLoopInterruptor.cc  EventLoopInterruptor.h  InetAddress.cc  InetAddress.cpp  Logger.cc  Logger.cpp  Reactor.cc  Reactor.cpp  Reactor.h  RingBuffer.cc  Selector.cc  Selector.h  Socket.cc  Socket.cpp  TcpClient.cc  TcpClient.cpp  TcpConnection.cc  TcpConnection.cpp  TcpServer.cc  TcpServer.cpp  Timer.h  TimerHeap.h  TimerQueue.cc  (+9 more)
src/flute/detail/: DescriptorSet.h  EPollReactor.h  EPollSelector.h  EpollSelector.h  IocpService.h  KqueueSelector.h  PollSelector.h  SelectSelector.h
src/flute/impl/: EpollReactor.cpp  EpollReactor.h  KqueueReactor.cpp  KqueueReactor.h
test/: Buffer_test.cpp  CMakeLists.txt  EchoClient_test.cpp  EchoServer_test.cpp  EventLoop_test.cc  EventLoop_test.cpp  TcpClient_test.cc  TcpServer_test.cc  TcpServer_test.cpp  ThreadPool_test.cc  ThreadPool_test.cpp  UdpServer_test.cc
